--- a/src/App.scss
+++ b/src/App.scss
@@ -29,11 +29,25 @@
       color: #1C1B20;
     }
 
+    .chinese {
+      // font-family: 'Ma Shan Zheng', cursive;
+      font-family: 'Noto Sans TC', sans-serif;
+      font-size: 20px;
+      color: #1C1B20;
+    }
+
+    .triditional {
+      font-family: 'Noto Sans TC', sans-serif;
+      font-size: 20px;
+      color: #1C1B20;
+    }
+
     .content {
       font-style: italic;
-      font-family: 'Lobster', cursive;
+      // font-family: 'Lobster', cursive;
+      font-family: 'Righteous', cursive;
       font-size: 15px;
-      color: lightgray;
+      color: darkgray;
     }
   }
 
@@ -51,3 +65,62 @@
   }
 }
 
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 24px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #1C1B20;
+}
+
+input:focus + .slider {
+  // box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(16px);
+  -ms-transform: translateX(16px);
+  transform: translateX(16px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
